increase MaxPermSize for started tomcat, was not enough on jenkins
git-svn-id: https://svn.exedio.com/cope/persistence/trunk@21661 e7d4fc99-c606-0410-b9bf-843393a9eab7